moved everything to one page and changed styling of project cards

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,18 +8,23 @@
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
+    scroll-behavior: smooth;
 }
 
-main {
+body {
+    width: 100%;
+}
+
+
+header {
     height: 100vh;
     width: 100vw;
 }
 
 #home h1 {
-    padding: 1rem;
-    position: absolute;
-
-
+   position: absolute;
+   left: 3rem;
+   padding-top: 1rem;
 }
 
 #home nav {
@@ -52,15 +57,104 @@ main {
     background: rgba(71, 71, 71, 0.448)
 }
 
-@media (max-width: 1015px) {
-    #home h1 {
-        width: 100%;
+#projects {
+    /* position: relative; */
+}
+
+#projects h1 {
+    padding-left: 3rem;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    
+}
+
+#project-showcase {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.project {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* align-items: center; */
+    margin-bottom: 4rem;
+    
+}
+
+.project-title {
+    padding: 0;
+    margin: 0 0 .75rem;
+}
+.project-info-container {
+    width: 70%;
+    padding: 0 2rem;
+    margin-left: 2rem;
+    position: relative;
+}
+
+.project-info-container .description {
+    margin-bottom: 2.2rem;
+}
+
+
+.project .project-img-container {
+    align-self: center;;
+    height: 100%;
+    width: 30%
+}
+
+.description p:nth-child(1) {
+    font-style: italic;
+    margin-bottom: .75rem;
+}
+
+#projects img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    border-radius: 5%
+}
+
+.view-links {
+    position: absolute;
+    bottom: 0px
+}
+
+#projects .view-links img {
+    width: 3rem;
+    height: 100%
+}
+
+@media (max-width: 800px) {
+    #projects h1 {
+        /* width: 100%; */
         text-align: center;
+        padding: 0;
+        margin: 0 0 2.5rem
+    }
+    .project {
+        flex-direction: column
     }
 
-    #home nav {
-        height: 60%;
-        width: 100%;
+    .project-info-container {
+        padding: 0;
+        margin: 0;
     }
+
+    .project-title {
+        margin: 1rem 0 1rem;
+    }
+
+    .project .project-img-container {
+        width: 100%;
+        height: 100%;
+        border-radius: 2%
+    }
+
 }
+
 
