improved responsiveness and fixed image aspect ratio scaling

--- a/styles/index.css
+++ b/styles/index.css
@@ -23,8 +23,8 @@ header {
 
 #home h1 {
    position: absolute;
-   left: 3rem;
-   padding-top: 1rem;
+   padding: 1rem 0 0 3rem
+   
 }
 
 #home nav {
@@ -64,7 +64,7 @@ header {
 #projects h1 {
     padding-left: 3rem;
     font-size: 2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 4.5rem;
     
 }
 
@@ -80,8 +80,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* align-items: center; */
-    margin-bottom: 4rem;
+    margin-bottom: 6rem;
     
 }
 
@@ -107,6 +106,11 @@ header {
     width: 30%
 }
 
+.project-img-container img {
+    border-radius: 3%;
+    height: 100%;
+}
+
 .description p:nth-child(1) {
     font-style: italic;
     margin-bottom: .75rem;
@@ -116,7 +120,6 @@ header {
     height: 100%;
     width: 100%;
     object-fit: contain;
-    border-radius: 5%
 }
 
 .view-links {
@@ -126,15 +129,20 @@ header {
 
 #projects .view-links img {
     width: 3rem;
-    height: 100%
 }
 
 @media (max-width: 800px) {
+    #home h1 {
+        left: 0;
+        width: 100%;
+        text-align: center;
+        padding: 1.5rem 0 0 0;
+    }
     #projects h1 {
         /* width: 100%; */
         text-align: center;
         padding: 0;
-        margin: 0 0 2.5rem
+        margin-bottom: 4rem
     }
     .project {
         flex-direction: column
@@ -152,7 +160,15 @@ header {
     .project .project-img-container {
         width: 100%;
         height: 100%;
-        border-radius: 2%
+        
+    }
+
+    .project-img-container img {
+        border-radius: 0%
+    }
+
+    .project-info-container .description {
+        margin-bottom: 3.5rem
     }
 
 }
