--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,6 @@
 * {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -21,6 +23,27 @@ header {
     width: 100vw;
     display: flex;
     justify-content: space-between;
+    color: white;
+}
+
+header video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: contain;
+    z-index: -2;
+    filter: grayscale(100%)
+}
+
+#video-overlay {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    background-color: black;
+    opacity: .6;
 }
 
 #media-links {
@@ -31,7 +54,8 @@ header {
 #media-links img {
     display: block;
     height: 45px;
-    width: 45px
+    width: 45px;
+    
 }
 
 #home h1 {
@@ -61,9 +85,9 @@ header {
     text-align: center;
 }
 #home a {
-    font-size: 1.25rem;
-    color: black;
+    font-size: 1.7rem;
     text-decoration: none;
+    color: white;
 }
 
 #home li:hover {
@@ -71,12 +95,13 @@ header {
 }
 
 #projects {
-   height: 90vh;
+   height: 100vh;
 }
 
 #projects h1 {
     padding: 1rem 0 0 3rem;
-    font-size: 2rem
+    font-size: 2rem;
+    position: absolute;
 }
 
 #project-showcase {
@@ -116,7 +141,7 @@ header {
 
 
 .project .project-img-container {
-    align-self: center;;
+    align-self: center;
     height: 100%;
     width: 30%
 }
@@ -177,6 +202,7 @@ header {
     }
     #projects h1 {
         /* width: 100%; */
+        position: static;
         text-align: center;
         padding: .5rem 0 0 0;
         margin-bottom: 3.5rem;
