--- a/styles/index.css
+++ b/styles/index.css
@@ -20,26 +20,25 @@ body {
 }
 
 header {
-    width: 65%;
+    width: 50%;
     margin: 0 auto;
 }
 
 nav {
-    padding: 1rem 0;
+    padding: 1.5rem 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-nav h1 {
-    color: white;
-    align-self: center
+#ndubsCodesImg {
+    height: 2.5rem;
 }
 
-
 nav ul {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     max-width: fit-content;
     height: auto;
@@ -50,7 +49,7 @@ nav ul {
 nav ul a {
     text-decoration: none;
     color: white;
-    margin: 0 1rem;
+    margin: 0 0 0 1rem;
 }
 
 nav ul li {
@@ -72,7 +71,7 @@ section h1 {
 }
 
 #bio {
-    margin-top: 2rem;
+    margin-top: 1.6rem;
     padding: 1rem;
     border: 1px solid #303030;
     border-radius: 1.25%;
@@ -149,6 +148,43 @@ section h1 {
     margin-bottom: 1rem;
 }
 
+#scroller {
+    max-width: 800px;
+    margin: 1rem auto;
+}
+
+#scroller[data-animated="true"] {
+    overflow: hidden;
+    -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+#scroller[data-animated="true"] .scrollerInner {
+    width: max-content;
+    flex-wrap: nowrap;
+    animation: scroll var(--_animation-duration, 30s) linear infinite;
+}
+
+@keyframes scroll {
+    to {
+        transform: translateX(calc(-50% - 0.5rem));
+    }
+}
+
+.imageList {
+    width: 100%;
+    padding-block: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    overflow: hidden;
+}
+
+.imageList img {
+    max-width: 60px;
+    height: 60px;
+}
+
 #jobs {
     position: relative;
     padding-left: 2em;
@@ -205,63 +241,6 @@ section h1 {
     justify-content: center;
 }
 
-.project {
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 4rem;
-}
-
-.project-title {
-    padding: 0;
-    margin: 0 0 .75rem;
-}
-
-.project-info-container {
-    width: 70%;
-    padding: 0 2rem;
-    margin-left: 2rem;
-    position: relative;
-}
-
-.project-info-container .description {
-    margin-bottom: 2.2rem;
-}
-
-
-.project .project-img-container {
-    align-self: center;
-    height: 100%;
-    width: 30%
-}
-
-.project-img-container img {
-    border-radius: 3%;
-    height: 100%;
-}
-
-.description p:nth-child(1) {
-    font-style: italic;
-    margin-bottom: .75rem;
-}
-
-#projects img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-}
-
-.view-links {
-    position: absolute;
-    bottom: 0px
-}
-
-#projects .view-links img {
-    width: 3rem;
-}
 
 @media (max-width: 800px) {
     #home h1 {
@@ -273,7 +252,6 @@ section h1 {
 
     header {
         flex-direction: column;
-        padding-bottom: 5rem;
     }
 
     #media-links {
