--- a/styles/index.css
+++ b/styles/index.css
@@ -66,14 +66,18 @@ section {
 }
 
 section h1 {
-    font-size: 1.75rem;
+    font-size: 1.85rem;
     font-weight: bold;
-    margin: 1rem 0;
+    margin: 1.15rem 0;
+}
+
+#name h1 {
+    margin-top: 0rem;
 }
 
 #bio {
     margin-top: 1.6rem;
-    padding: 0.5rem 1rem 1rem;
+    padding: 1rem;
     border: 1px solid #303030;
     border-radius: 1.25%;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
