--- a/styles/index.css
+++ b/styles/index.css
@@ -364,6 +364,10 @@ footer {
 }
 
 @media (max-width: 800px) {
+    nav {
+        width: 100%
+    }
+
     section {
         width: 90%;
     }
@@ -384,6 +388,7 @@ footer {
     }
 
     header {
+        width: 80%;
         flex-direction: column;
     }
 
