--- a/styles/index.css
+++ b/styles/index.css
@@ -71,8 +71,9 @@ section h1 {
     margin: 1.15rem 0;
 }
 
-#name h1 {
+#bio h3 {
     margin-top: 0rem;
+    font-weight: 350;
 }
 
 #bio {
@@ -142,7 +143,7 @@ section h1 {
 }
 
 #categories div h3 {
-    font-weight: 450;
+    font-weight: 550;
     margin-bottom: 0.3rem;
 }
 
